--- a/web/style.css
+++ b/web/style.css
@@ -1,11 +1,12 @@
 h1{
-    margin: 0;
+    margin: 0 0 15px 0;
     font-family: "Pixelify Sans", sans-serif;
-    font-size: 24px;
+    font-size: 28px;
     text-align: left;
-    outline-color: black;
-    outline-style: groove;
-    padding: 5px;
+    outline: 2px groove black;
+    padding: 10px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
 }
 
 table{
@@ -18,6 +19,15 @@ td, tr{
     text-align: center;
 }
 
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+#pref-table td:first-child,
+#daily-table td:first-child {
+    text-align: left;
+}
+
 #search-button{
     padding: 14px;
 }
@@ -26,6 +36,15 @@ td, tr{
     padding: 7px;
 }
 
-.country-chart{
+button:hover, select:hover {
+    background-color: #f0f0f0;
+}
 
+img#graph {
+    display: block;
+    margin-top: 20px;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #aaa;
+    border-radius: 5px;
 }
